--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,8 @@ img{
 header{
     background: #FFFFFF;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
+    position: relative;
+    z-index: 2;
 }
 .header{
     display: flex;
@@ -287,6 +289,7 @@ header{
     color: #1E1E1E;
     padding: 60px 0 40px;
 }
+.side-btn,
 .time__btn{
     font-family: 'Open Sans';
     font-style: normal;
@@ -349,6 +352,7 @@ header{
     font-size: 36px;
     line-height: 48px;
     color: #1E1E1E;
+    position: relative;
 }
 .what-slider{
     position: relative;
@@ -539,7 +543,7 @@ header{
     line-height: 16px;
     color: #FFFFFF;
     position: absolute;
-    padding: 5px 11px;
+    padding: 4px 11px;
     background: #25ACA4;
     border-radius: 46px;
     z-index: 2;
@@ -579,6 +583,7 @@ header{
     background: url(../img/star.svg) no-repeat center;
     width: 24px;
     height: 24px;
+    background-size: contain;
 }
 .rate span{
     font-family: 'Open Sans';
@@ -778,6 +783,9 @@ header{
     height: 100%;
     background: linear-gradient(180deg, rgba(30, 30, 30, 0) 54.76%, rgba(30, 30, 30, 0.5) 100%);
 }
+.related-slider__img img,
+.interest-slider__link img,
+.tcard-gallery a img,
 .mstock-slider__item img{
     position: absolute;
     width: 100%;
@@ -821,6 +829,8 @@ header{
     padding-bottom: 35px;
     position: relative;
 }
+.bridge__title:after,
+.toptag__title:after,
 .rev__title:after{
     content: '';
     display: block;
@@ -877,12 +887,14 @@ header{
     grid-template-columns: 1fr 24px;
     grid-gap: 20px;
 }
+.revex-author,
 .rev-author{
     display: grid;
     grid-template-columns: 54px 1fr;
     grid-gap: 20px;
     align-items: center;
 }
+.revex-author__icon,
 .rev-author__icon{
     width: 54px;
     height: 54px;
@@ -890,6 +902,7 @@ header{
     overflow: hidden;
     position: relative;
 }
+.revex-author__icon img,
 .rev-author__icon img{
     position: absolute;
     width: 100%;
@@ -1311,6 +1324,9 @@ header{
     padding: 0 0 25px;
     display: none;
 }
+.content-desc__text p:not(:last-child),
+.top-desc p:not(:last-child),
+.toptag__desc p:not(:last-child),
 .faq-item__desc p:not(:last-child){
     padding-bottom: 20px;
 }
@@ -1451,4 +1467,761 @@ footer{
 .footer-right{
     max-width: 209px;
     width: 100%;
+}
+.hero{
+    position: relative;
+}
+.hero-bread{
+    position: absolute;
+    left: 0;
+    width: 100%;
+    top: 40px;
+}
+.bread{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.bread li,
+.bread a{
+    text-decoration: none;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    color: #A0A2A7;
+    transition: all 0.3s;
+}
+.bread a:after{
+    content: '';
+    width: 10px;
+    height: 1px;
+    background: #A0A2A7;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0 10px;
+}
+.bread a:hover{
+    color: #1E1E1E;
+}
+.hero._white{
+    padding: 20px 0 0;
+}
+.search-wrap{
+    margin-top: -38px;
+    position: relative;
+}
+body._listing .excurs-wrap{
+    padding-top: 60px;
+}
+body._tag .what-wrap,
+body._listing .mstock-wrap{
+    padding-bottom: 0;
+}
+body._tag .search-wrap{
+    margin: 0;
+}
+.toptag-wrap{
+    padding: 40px 0 60px;
+}
+.toptag__desc{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    color: #1E1E1E;
+    padding: 40px 0 0;
+}
+.toptag__title{
+    position: relative;
+    padding: 40px 0 46px;
+}
+.toptag__title:after{
+    left: 0;
+    transform: unset;
+}
+.excurs-tag-wrap{
+    padding: 80px 0 0;
+}
+.bridge-wrap{
+    padding: 100px 0;
+}
+.bridge-box{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 70px;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #1E1E1E;
+    padding: 40px 0 0;
+}
+.bridge__title{
+    padding: 0 0 46px;
+}
+.bridge__title:after{
+    left: 0;
+    transform: unset;
+}
+.tcard__rate:before{
+    width: 36px;
+    height: 36px;
+}
+.tcard__rate span{
+    font-size: 18px;
+    line-height: 25px;
+    padding: 2px 0 0;
+    display: block;
+}
+.tcard-top{
+    display: grid;
+    grid-template-columns: 1fr 36px;
+    grid-gap: 20px;
+    align-items: center;
+    padding: 33px 0 52px;
+}
+.tcard-wrap{
+    padding: 40px 0 100px;
+}
+.tcard-gallery{
+    display: grid;
+    grid-template-columns: 770px 1fr;
+    grid-gap: 30px;
+}
+.tcard-gallery a{
+    text-decoration: none;
+    display: block;
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+    transition: all 0.3s;
+}
+.related-slider__item:hover .related-slider__img img,
+.interest-slider__link:hover img,
+.tcard-gallery a:hover{
+    filter: brightness(80%);
+}
+.tcard-gallery__big{
+    padding-bottom: 62.4%;
+}
+.tcard-gallery__small{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+}
+.tcard-gallery__item{
+    display: flex;
+    flex-direction: column;
+    grid-gap: 30px;
+}
+.tcard-gallery__item:nth-child(2) a:nth-child(2),
+.tcard-gallery__item a:nth-child(1){
+    height: 170px;
+}
+.tcard-gallery__item:nth-child(2) a:nth-child(1),
+.tcard-gallery__item a:nth-child(2){
+    height: calc(100% - 200px);
+}
+.tcard-gallery__more{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 24px;
+    text-align: center;
+    color: #FFFFFF;
+    background: rgba(2, 62, 212, 0.4);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.tcard-gallery__more span{
+    display: block;
+}
+.tcard-gallery__more span:last-child{
+    font-size: 14px;
+    line-height: 24px;
+}
+.scroll{
+    display: grid;
+    grid-template-columns: 1fr 300px;
+    grid-gap: 99px;
+}
+.side{
+    background: linear-gradient(207.82deg, rgba(77, 180, 95, 0.1) 0%, rgba(2, 62, 212, 0.1) 100%);
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.07);
+    border-radius: 20px;
+    padding: 30px 30px 25px;
+}
+.side__title{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 24px;
+    color: #1E1E1E;
+}
+.side-item__title{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    color: #000000;
+}
+.info-block{
+    position: relative;
+    cursor: pointer;
+    display: inline-block;
+}
+.info-block__icon{
+    background: url(../img/info.svg) no-repeat center;
+    width: 16px;
+    height: 16px;
+    position: relative;
+    bottom: 5px;
+    margin-left: 5px;
+}
+.side-item{
+    display: grid;
+    grid-template-columns: 1fr 90px;
+    min-height: 44px;
+}
+.side-price{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.side-price__actual{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 18px;
+    color: #000000;
+}
+.side-price__old{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    text-align: center;
+    text-decoration-line: line-through;
+    color: #A0A2A7;
+    padding: 8px 0 0;
+}
+.info-block__popup{
+    position: absolute;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #000000;
+    background: white;
+    border-radius: 10px;
+    padding: 10px 10px;
+    bottom: 30px;
+    width: 200px;
+    left: 50%;
+    transform: translateX(-50%);
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.3s;
+    box-shadow: 0 0 10px #00000024;
+}
+.info-block:hover .info-block__popup{
+    opacity: 1;
+    visibility: visible;
+}
+.info-block__popup:before{
+    content: '';
+    display: block;
+    position: absolute;
+    border: 10px solid transparent;
+    border-top: 10px solid white;
+    bottom: -15px;
+    filter: drop-shadow(0px 2px 10px rgba(0, 0, 0, 0.1));
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: -1;
+}
+.side-item__content{
+    display: flex;
+    align-items: center;
+}
+.side-box{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
+}
+.side-btn{
+    width: 100%;
+    margin: 30px 0 20px;
+}
+.side-bottom{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    text-align: center;
+    color: #023ED4;
+}
+.side-bottom b{
+    font-weight: 700;
+}
+.top-desc{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 30px;
+    color: #1E1E1E;
+    position: relative;
+    padding: 0 0 55px;
+}
+.top-desc:after{
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 5px;
+    background: url(../img/line-top.svg) no-repeat center;
+    bottom: 0;
+}
+.detail-item__icon{
+    width: 30px;
+    height: 30px;
+}
+.detail-item__icon img{
+    height: 100%;
+}
+.content-title{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    color: #1E1E1E;
+}
+.detail{
+    padding: 50px 0 55px;
+    position: relative;
+}
+.same:after,
+.content-list:after,
+.content-desc._vs-line:after,
+.interest:after,
+.content-map:after,
+.detail:after{
+    content: '';
+    display: block;
+    position: absolute;
+    background: url(../img/line-detail.svg) no-repeat center;
+    height: 5px;
+    left: 0;
+    width: 100%;
+    bottom: 0;
+}
+.detail-box{
+    padding: 40px 0 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 34px 20px;
+}
+.detail-item{
+    display: grid;
+    grid-template-columns: 30px 1fr;
+    grid-gap: 20px;
+}
+.detail-item__title{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #1E1E1E;
+}
+.content-desc__text{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 30px;
+    color: #1E1E1E;
+    position: relative;
+    padding: 40px 0 0;
+}
+.content-desc{
+    padding: 50px 0;
+    position: relative;
+}
+.content-map iframe{
+    width: 100%;
+    border: none;
+}
+.content-map{
+    padding: 0 0 55px;
+    position: relative;
+}
+.interest-top{
+    display: grid;
+    grid-template-columns: 1fr 95px;
+    grid-gap: 20px;
+    align-items: center;
+}
+.interest{
+    padding: 50px 0 55px;
+    position: relative;
+    overflow: hidden;
+}
+.interest-slider__link{
+    text-decoration: none;
+    display: block;
+    position: relative;
+    margin: 30px 0 0;
+    padding-bottom: 42.4%;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.interest-slider{
+    max-width: 470px;
+    width: 100%;
+    padding: 50px 0 0;
+}
+.interest-slider__pos{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    color: #000000;
+    position: relative;
+    padding-left: 31px;
+}
+.interest-slider__pos:before{
+    content: '';
+    display: inline-block;
+    background: url(../img/d-pos.svg) no-repeat center;
+    width: 12px;
+    height: 16px;
+    background-size: contain;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.interest__swiper{
+    overflow: unset;
+}
+.swiper-button-disabled{
+    cursor: default;
+}
+.swiper-button-disabled:active{
+    background-position-x: center;
+}
+.content-list{
+    padding: 50px 0 55px;
+    position: relative;
+}
+.list-box{
+    padding: 50px 0 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 85px;
+}
+.list-box__item{
+    display: flex;
+    flex-direction: column;
+    grid-gap: 20px;
+}
+.list-box__item li{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #1E1E1E;
+    position: relative;
+    padding-left: 42px;
+}
+.list-box__item li:before{
+    content: '';
+    width: 12px;
+    height: 12px;
+    background: #023ED4;
+    border-radius: 50%;
+    position: absolute;
+    display: block;
+    left: 0;
+    top: 5px
+}
+.ship-link{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 40px 0 20px;
+}
+.ship-link a{
+    text-decoration: none;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 30px;
+    color: #000000;
+}
+.ship-link a:not(:last-child):after{
+    content: ',';
+    display: inline-block;
+    margin-right: 5px;
+}
+.ship-link a:hover{
+    text-decoration: underline;
+}
+.ship-desc{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 30px;
+    color: #000000;
+}
+.ship-img{
+    padding: 30px 0;
+}
+.ship-info{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 16px;
+    color: #DD5A3D;
+    padding-left: 39px;
+    position: relative;
+}
+.ship-info:before{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    background: url(../img/info-ship.svg) no-repeat center;
+    width: 24px;
+    height: 24px;
+}
+.ship{
+    padding: 50px 0 40px;
+    position: relative;
+}
+.same{
+    display: flex;
+    flex-wrap: wrap;
+    grid-gap: 15px;
+    padding: 0 0 55px;
+    position: relative;
+}
+.same a{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px;
+    color: #A0A2A7;
+    text-decoration: none;
+    display: block;
+    padding: 8px 16px;
+    border: 1px solid #D9D9D9;
+    border-radius: 50px;
+    transition: all 0.3s;
+}
+.same a:hover{
+    background: #023ED4;
+    color: white;
+    border-color: #023ED4;
+}
+.revex-slider__item .rev-item{
+    width: 100%;
+}
+.revex-slider{
+    max-width: 470px;
+    width: 100%;
+}
+.revex__btn{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 19px;
+    color: #1E1E1E;
+    padding: 14px 20px;
+    border: 1px solid #E6E8ED;
+    border-radius: 40px;
+    display: flex;
+    width: fit-content;
+    width: -moz-fit-content;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    max-width: 200px;
+    width: 100%;
+}
+.revex__btn:before{
+    content: '';
+    display: inline-block;
+    background: url(../img/pen.svg) no-repeat center;
+    width: 16px;
+    height: 16px;
+    margin-right: 15px;
+}
+.revex__top{
+    display: grid;
+    grid-template-columns: 1fr 200px;
+    padding: 0 0 44px;
+}
+.revex{
+    padding: 50px 0 0;
+}
+.revex-author__title{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
+    color: #1E1E1E;
+}
+.revex-author__date{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #1E1E1E;
+    padding: 6px 0 0;
+}
+.revex-slider__top{
+    display: grid;
+    grid-template-columns: 1fr 100px;
+    grid-gap: 20px;
+}
+.revex-author__rate{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    padding-top: 7px;
+}
+.revex-author__rate span{
+    width: 16px;
+    height: 16px;
+    display: block;
+    background: url(../img/star-def.svg) no-repeat center;
+}
+.revex-author__rate span.active{
+    background: url(../img/star-active.svg) no-repeat center;
+}
+.revex__swiper{
+    padding: 20px;
+    margin: -20px;
+    overflow: unset;
+}
+.revex-slider__item{
+    background: #FFFFFF;
+    box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.07);
+    border-radius: 20px;
+    padding: 30px 30px 20px;
+}
+.revex-wrap{
+    margin: -20px;
+    padding: 20px;
+    overflow: hidden;
+}
+.related-slider__item{
+    display: grid;
+    grid-template-columns: 170px 1fr;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.related-slider__title{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    color: #1E1E1E;
+    max-width: 150px;
+}
+.related-slider__top{
+    display: grid;
+    grid-template-columns: 1fr 24px;
+    grid-gap: 20px;
+    align-items: center;
+}
+.related-slider{
+    max-width: 970px;
+    width: 100%;
+    padding: 60px 0 0;
+}
+.related__swiper{
+    overflow: unset;
+}
+.related-wrap{
+    overflow: hidden;
+}
+.related-slider__desc{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #1E1E1E;
+    padding: 10px 0 25px;
+}
+.related-slider__price>span{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 24px;
+    color: #1E1E1E;
+}
+.related-slider__content{
+    padding: 20px 20px 30px 30px;
+    background: #FFFFFF;
+    border: 1px solid #F0F2F7;
+    border-left: 0;
+    border-radius: 0px 20px 20px 0px;
+}
+.revex-slider__desc{
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #1E1E1E;
+    padding: 20px 0 0;
+}
+.related{
+    display: grid;
+    grid-template-columns: 1fr 95px;
+    grid-gap: 20px;
+    align-items: center;
+}
+.related-wrap{
+    padding: 100px 0 100px;
+}
+.related-slider__img{
+    position: relative;
 }
